# fastvlq

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: fastvlq  fastvlq.rs
src/: ext.rs  futures.rs  lib.rs  macros.rs  tokio.rs  vi128.rs  vi32.rs  vi64.rs  vu128.rs  vu32.rs  vu64.rs
