[package]
name = "fastvlq"
description = "A fast variant of Variable-Length Quantity with a focus on speed and no_std support."
documentation = "https://docs.rs/fastvlq"
repository = "https://github.com/bbqsrc/fastvlq"
version = "1.1.0"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
categories = ["algorithms", "compression", "encoding", "no-std"]
edition = "2018"
license = "Apache-2.0 OR MIT"

[dependencies]
core2 = { version = "0.3", default-features = false }

[dev-dependencies]
proptest = "0.10.1"
rand = "0.7"

[features]
default = ["std"]
std = ["core2/std"]
