[package]
name = "fastvlq"
description = "A fast variant of Variable-Length Quantity with a focus on speed and no_std support."
documentation = "https://docs.rs/fastvlq"
repository = "https://github.com/bbqsrc/fastvlq"
version = "2.0.0"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
categories = ["algorithms", "compression", "encoding", "no-std"]
edition = "2024"
license = "Apache-2.0 OR MIT"

[dev-dependencies]
proptest = "1.9"
rand = "0.9"

[features]
default = ["std"]
std = []
